courses/430_programming-languages/assignment-5/tests/error/error06.sml
val prog =
  PROGRAM
    {decls=[],
     func_decls=[("f",
                  {body=[ST_EXP {exp=EXP_CALL {args=[],func=EXP_ID "f"}}],
                   decls=["f"],params=[]})],
     stmts=[ST_EXP {exp=EXP_CALL {args=[],func=EXP_ID "f"}}]} : program
;
